<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/tv_nickname"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="-2dp"
        android:text="@string/player"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/tv_rating"
        app:layout_constraintStart_toEndOf="@+id/iv_avatar"
        app:layout_constraintTop_toTopOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_account_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_id"
        app:layout_constraintStart_toStartOf="@+id/tv_nickname"
        app:layout_constraintTop_toBottomOf="@+id/tv_nickname" />

    <ImageView
        android:id="@+id/iv_avatar"
        android:layout_width="64dp"
        android:layout_height="64dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="12dp"
        android:src="@drawable/avatar_64"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/iv_rating"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_marginEnd="4dp"
        android:src="@drawable/not_calibrated"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_rating"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="4dp"
        android:text="@string/test"
        android:textSize="16dp"
        app:layout_constraintEnd_toStartOf="@+id/iv_rating"
        app:layout_constraintTop_toTopOf="@+id/tv_nickname" />

    <TextView
        android:id="@+id/tv_estimate_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/estimate"
        app:layout_constraintEnd_toStartOf="@+id/tv_wl_const"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/iv_avatar" />

    <TextView
        android:id="@+id/tv_estimate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_number_big"
        app:layout_constraintEnd_toEndOf="@+id/tv_estimate_const"
        app:layout_constraintStart_toStartOf="@+id/tv_estimate_const"
        app:layout_constraintTop_toBottomOf="@+id/tv_estimate_const" />

    <TextView
        android:id="@+id/tv_wl_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_slash_loss_big"
        app:layout_constraintEnd_toStartOf="@+id/tv_winrate_const"
        app:layout_constraintStart_toEndOf="@+id/tv_estimate_const"
        app:layout_constraintTop_toTopOf="@+id/tv_estimate_const" />

    <TextView
        android:id="@+id/tv_wl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_number"
        app:layout_constraintEnd_toEndOf="@+id/tv_wl_const"
        app:layout_constraintStart_toStartOf="@+id/tv_wl_const"
        app:layout_constraintTop_toBottomOf="@+id/tv_wl_const" />

    <TextView
        android:id="@+id/tv_winrate_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_rate"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/tv_wl_const"
        app:layout_constraintTop_toTopOf="@+id/tv_wl_const" />

    <TextView
        android:id="@+id/tv_winrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/base_percent"
        app:layout_constraintEnd_toEndOf="@+id/tv_winrate_const"
        app:layout_constraintStart_toStartOf="@+id/tv_winrate_const"
        app:layout_constraintTop_toBottomOf="@+id/tv_winrate_const" />
</androidx.constraintlayout.widget.ConstraintLayout>
