<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/background_test">

    <ImageView
        android:id="@+id/iv_hero"
        android:layout_width="113dp"
        android:layout_height="64dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:src="@drawable/antimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_last_played_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/last_played"
        app:layout_constraintStart_toStartOf="@+id/iv_hero"
        app:layout_constraintTop_toBottomOf="@id/iv_hero" />

    <TextView
        android:id="@+id/tv_last_played"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:text="@string/base_date"
        app:layout_constraintBottom_toBottomOf="@+id/tv_last_played_const"
        app:layout_constraintStart_toEndOf="@+id/tv_last_played_const" />

    <TextView
        android:id="@+id/tv_matches_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/matches"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/iv_hero"
        app:layout_constraintEnd_toStartOf="@+id/tv_wl_const"
        app:layout_constraintStart_toEndOf="@+id/iv_hero"
        app:layout_constraintTop_toTopOf="@+id/iv_hero" />

    <TextView
        android:id="@+id/tv_matches"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-2dp"
        android:text="@string/base_number_big"
        app:layout_constraintBottom_toTopOf="@+id/tv_matches_const"
        app:layout_constraintStart_toStartOf="@+id/tv_matches_const" />

    <TextView
        android:id="@+id/tv_wl_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_slash_loss_big"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_matches_const"
        app:layout_constraintEnd_toStartOf="@+id/tv_winrate_const"
        app:layout_constraintStart_toEndOf="@id/tv_matches_const" />

    <TextView
        android:id="@+id/tv_wl"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-2dp"
        android:text="@string/base_number_big"
        app:layout_constraintBottom_toTopOf="@+id/tv_wl_const"
        app:layout_constraintStart_toStartOf="@+id/tv_wl_const" />

    <TextView
        android:id="@+id/tv_winrate_const"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/win_percent"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_wl_const"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/tv_wl_const" />

    <TextView
        android:id="@+id/tv_winrate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="-2dp"
        android:text="@string/base_percent"
        app:layout_constraintBottom_toTopOf="@+id/tv_winrate_const"
        app:layout_constraintStart_toStartOf="@+id/tv_winrate_const" />


</androidx.constraintlayout.widget.ConstraintLayout>
